[package]
name = "fake-airplay"
version = "0.1.0"
edition = "2021"
description = "A library to create a fake AirPlay service."
license = "MIT"
repository = "https://github.com/Frostie314159/fake-airplay"

[dependencies]
gethostname = "0.4.1"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
zeroconf = "0.10.5"
