[package]
name = "fake-airplay"
version = "0.1.3"
edition = "2021"
description = "A library to create a fake AirPlay service."
license = "MIT"
repository = "https://github.com/Frostie314159/fake-airplay"

[dependencies]
ctrlc = "3.2.5"
env_logger = "0.10.0"
gethostname = "0.4.1"
log = "0.4.17"
rand = "0.8.5"
tokio = { version = "1.27.0", features = ["full"] }
zeroconf = "0.10.5"
